# ORACLE

./: CMakeLists.txt  LICENSE  README.md  common_flags.py  config.py  package.xml  requirements_cuda10_1.txt  requirements_cuda11.txt  utilities.py
config_files/: config_flightmare_oracle.py  config_flightmare_oracle_naive.py  config_flightmare_sevae_oracle.py  config_flightmare_sevae_oracle_naive.py  config_gazebo_corridor_oracle_naive.py  config_gazebo_corridor_sevae_oracle.py  config_gazebo_corridor_sevae_oracle_naive.py  config_gazebo_gallery_a_oracle.py  config_gazebo_gallery_a_oracle_naive.py  config_gazebo_subway_a_oracle.py  config_gazebo_subway_a_oracle_naive.py
env/: flightmare_common.py  flightmare_wrapper.py  realtime_ros_wrapper.py  realtime_ros_wrapper_infogain_ardupilot.py  rotors_wrappers.py  sim_env_base_class.py
evaluate/: evaluate.py
generate/: generate_data_info_gain.py
inference/: network_inference_base_class.py  network_inference_tensorflow.py  network_inference_tensorrt.py
optimize/: convert_keras_cnn_only_to_onnx.py  convert_keras_cnn_to_tensorrt_engine.py  convert_keras_combiner_tensorrt_engine.py  convert_keras_combiner_tensorrt_engine_sevae.py  convert_keras_infogain_cnn_to_tensorrt_engine.py  convert_keras_infogain_predictor_to_tensorrt_engine.py  convert_keras_infogain_predictor_to_tensorrt_engine_light_inference.py  convert_keras_rnn_to_tensorrt_engine.py  convert_keras_rnn_to_tensorrt_engine_sevae.py  convert_keras_to_onnx_infogain.py  onnx_model_check.py  optimize_onnx_models.sh  optimize_onnx_models_infogain.sh
(+70 files in other folders)
